[package]
name = "yabladargh"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.58"
eliza = "2.0.0"
futures = "0.3.21"
image = "0.24.3"
piet-common = "0.5.0"
reqwest = "0.11.11"
tokio = { version = "1.20.0", features = ["macros", "rt-multi-thread", "time"] }
twilight-cache-inmemory = "0.12.0"
twilight-gateway = "0.12.0"
twilight-http = "0.12.0"
twilight-model = "0.12.1"
twilight-util = { version = "0.12.0", features = ["builder"] }
v8 = "0.47.0"
